fix: gap

--- a/src/components/molecules/productSectionContainer/ProductSectionContainer.scss
+++ b/src/components/molecules/productSectionContainer/ProductSectionContainer.scss
@@ -15,7 +15,7 @@
   > div {
     display: flex;
     margin: 0 auto;
-    gap: 0.5rem;
+    gap: 0.75rem;
   }
 }
 
